--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,16 @@ img {
 .header {
 border-bottom: 1px solid #e7e9fc;
 }
+.container {
+    width: 1158px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+.navigations {
+    display: flex;
+    align-items: center;
+    }
+
 /* Logo */
 .logo-header {
     font-family: 'Raleway', sans-serif;
@@ -43,12 +53,17 @@ border-bottom: 1px solid #e7e9fc;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     color: #4d5ae5;
+    margin-right: 76px;
 }
 .logo-span {
     color: #2e2f42;
 
 }
 /* Navigations */
+.menu-ul {
+    gap: 40px;
+    display: flex;
+}
 .active {
     font-weight: 500;
     letter-spacing: 0.02em;
@@ -65,6 +80,14 @@ a:hover, button:hover, a:focus, button:focus {
 /* Address */
 address {
     font-style: normal;
+}
+.contact-ul {
+    gap: 40px;
+    display: flex;
+}
+.contact-li {
+    gap: 40px;
+    display: flex;
 }
 .mail {
     letter-spacing: 0.02em;
