add {.menu-li a}

--- a/css/styles.css
+++ b/css/styles.css
@@ -66,6 +66,9 @@ border-bottom: 1px solid #e7e9fc;
     display: flex;
     padding: 24px 0;
 }
+.menu-li a {
+    padding: 24px 0;
+}
 .active {
     font-weight: 500;
     letter-spacing: 0.02em;
