--- a/css/styles.css
+++ b/css/styles.css
@@ -1,153 +1,171 @@
-h1, h2, h3, h4, h5, h6, p, ul {
-    margin: 0;
-    padding: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+ul {
+  margin: 0;
+  padding: 0;
 }
 
 body {
-font-family: 'Roboto', sans-serif;
-color: #434455;
-background-color: #fff;
-line-height: 24px;
+  font-family: 'Roboto', sans-serif;
+  color: #434455;
+  background-color: #fff;
+  line-height: 24px;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 img {
-    display: block;
+  display: block;
 }
-
-.section-promo {
-    background-color: #2E2F42;
-}
-
 .section-team {
-    background-color: #F4F4FD;
+  background-color: #f4f4fd;
 }
 
 /* HEADER */
 .header {
-border-bottom: 1px solid #e7e9fc;
+  border-bottom: 1px solid #e7e9fc;
 }
 .container {
-    width: 1158px;
-    margin: 0 auto;
-    padding: 0 15px;
-    display: flex;
+  width: 1158px;
+  margin: 0 auto;
+  padding: 0 15px;
+  display: flex;
 }
 .navigations {
-    display: flex;
-    align-items: center;
-    }
+  display: flex;
+  align-items: center;
+}
 
 /* Logo */
 .logo-header {
-    font-family: 'Raleway', sans-serif;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: #4d5ae5;
-    margin-right: 76px;
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #4d5ae5;
+  margin-right: 76px;
 }
 .logo-span {
-    color: #2e2f42;
-
+  color: #2e2f42;
 }
+
 /* Navigations */
 .menu-ul {
-    gap: 40px;
-    display: flex;
-    padding: 24px 0;
+  gap: 40px;
+  display: flex;
+  padding: 24px 0;
 }
 .menu-li a {
-    padding: 24px 0;
+  padding: 24px 0;
 }
 .active {
-    font-weight: 500;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
-.active:hover, .active:focus {
-    color: #404bbf;
+.active:hover,
+.active:focus {
+  color: #404bbf;
 }
-a:hover, button:hover, a:focus, button:focus {
-    color: #404bbf;
+a:hover,
+button:hover,
+a:focus,
+button:focus {
+  color: #404bbf;
+}
 
-
-}
 /* Address */
 address {
-    font-style: normal;
+  font-style: normal;
 }
 .contact-ul {
-    gap: 40px;
-    display: flex;
-    padding: 24px 0;
+  gap: 40px;
+  display: flex;
+  padding: 24px 0;
 }
 
 .mail {
-    letter-spacing: 0.02em;
-    color: #434455;
+  letter-spacing: 0.02em;
+  color: #434455;
 }
+
 /* PROMO Section 1 */
-.promo-title {
-    font-size: 56px;
-    line-height: 1.07;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: #ffffff;
+.section-promo {
+  background-color: #2e2f42;
+  padding: 188px 0;
 }
+.promo-title {
+  font-size: 56px;
+  line-height: 1.07;
+  text-align: center;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  max-width: 496px;
+}
+
 /* Bytton */
 .btn {
-    background-color: #4d5ae5;
-    font-weight: 500;
-    line-height: 1.5;
-    letter-spacing: 0.04em;
-    color: #fff;
-    cursor: pointer;
+  background-color: #4d5ae5;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  cursor: pointer;
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  border-radius: 4px;
+  
 }
 .btn:hover {
-    background-color: #404bbf;
+  background-color: #404bbf;
 }
 .btn:focus {
-    background-color: #404bbf;
+  background-color: #404bbf;
 }
- /* PECULIARITTES Section 2 */
+/* PECULIARITTES Section 2 */
 .item-title {
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 1.2;
-    letter-spacing: 0.02em;
-    color: #2e2f42;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: #2e2f42;
 }
 .item-description {
-    letter-spacing: 0.02em;
+  letter-spacing: 0.02em;
 }
 
 /* OUR TEAM Section 3 */
 .section-title {
-    font-size: 36px;
-    line-height: 1.11;
-    text-align: center;
-    letter-spacing: 0.02em;
-    text-transform: capitalize;
-    color: #2e2f42;
+  font-size: 36px;
+  line-height: 1.11;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-transform: capitalize;
+  color: #2e2f42;
 }
 .team-item {
-    background-color: #fff;
+  background-color: #fff;
 }
 /* FOOTER */
 footer {
-    background-color: #2e2f42;
-    color: #f4f4fd;
+  background-color: #2e2f42;
+  color: #f4f4fd;
 }
 .logo-span-footer {
-    color: #f4f4fd;
+  color: #f4f4fd;
 }
