--- a/css/styles.css
+++ b/css/styles.css
@@ -147,8 +147,10 @@ address {
   height: 1px;
   margin: -1px;
   padding: 0;
+  white-space: nowrap;
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
+  clip-path: inset(100%);
   border: 0;
 }
 
