--- a/css/styles.css
+++ b/css/styles.css
@@ -159,7 +159,7 @@ address {
     gap: 24px;
 }
 .peculiarities-li {
-  width: calc(100% - 72px)/4;
+  width: calc((100% - 72px) / 4);
 }
 .item-title {
   font-weight: 500;
