--- a/css/styles.css
+++ b/css/styles.css
@@ -155,8 +155,8 @@ address {
 }
 
 .peculiarities-ul {
-    display: flex;
-    gap: 24px;
+  display: flex;
+  gap: 24px;
 }
 .peculiarities-li {
   width: calc((100% - 72px) / 4);
@@ -167,12 +167,16 @@ address {
   line-height: 1.2;
   letter-spacing: 0.02em;
   color: #2e2f42;
+  margin-bottom: 8px;
 }
 .item-description {
   letter-spacing: 0.02em;
 }
 
 /* OUR TEAM Section 3 */
+.section-team {
+  padding: 120px 0;
+}
 .section-title {
   font-size: 36px;
   line-height: 1.11;
@@ -180,9 +184,26 @@ address {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: #2e2f42;
+  margin-bottom: 72px;
 }
-.team-item {
+.team-ul {
+  display: flex;
+  gap: 24px;
+}
+.team-li {
   background-color: #fff;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
+}
+.profile {
+  padding: 32px 0;
+}
+.item-title {
+  text-align: center;
+  margin-bottom: 8px;
+}
+.item-description {
+  text-align: center;
 }
 /* FOOTER */
 footer {
