--- a/css/styles.css
+++ b/css/styles.css
@@ -28,9 +28,7 @@ li {
 img {
   display: block;
 }
-.section-team {
-  background-color: #f4f4fd;
-}
+
 
 /* HEADER */
 .header {
@@ -176,6 +174,7 @@ address {
 /* OUR TEAM Section 3 */
 .section-team {
   padding: 120px 0;
+  background-color: #f4f4fd;
 }
 .section-title {
   font-size: 36px;
@@ -204,6 +203,27 @@ address {
 }
 .item-description {
   text-align: center;
+}
+
+/* PORTFOLIO Section 4 */
+.section-portfolio {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+.portfolio-ul {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+  row-gap: 48px;
+}
+.portfolio-li {
+  width: calc((100% - 48px) / 3);
+}
+.portfolio-app {
+  padding: 32px 16px;
+  bottom: 1px solid #e7e9fc;
+  border-top: none;
+  margin-bottom: 8px;
 }
 /* FOOTER */
 footer {
