--- a/css/styles.css
+++ b/css/styles.css
@@ -213,17 +213,20 @@ address {
 .portfolio-ul {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+ gap: 24px;
   row-gap: 48px;
+ 
 }
 .portfolio-li {
-  width: calc((100% - 48px) / 3);
+   width: calc((100% - 48px) / 3);
+    
 }
 .portfolio-app {
   padding: 32px 16px;
-  bottom: 1px solid #e7e9fc;
+  border: 1px solid #e7e9fc;
   border-top: none;
   margin-bottom: 8px;
+
 }
 /* FOOTER */
 footer {
