--- a/css/styles.css
+++ b/css/styles.css
@@ -212,11 +212,12 @@ address {
 .portfolio-ul {
   display: flex;
   flex-wrap: wrap;
-  gap: 24px;
+  column-gap: 24px;
   row-gap: 48px;
 }
-.portfolio-li {
+.portfolio-li .li {
   width: calc((100% - 48px) / 3);
+  
 }
 .portfolio-app {
   padding: 32px 16px;
