--- a/css/styles.css
+++ b/css/styles.css
@@ -215,8 +215,8 @@ address {
   column-gap: 24px;
   row-gap: 48px;
 }
-.portfolio-li .li {
-  width: calc((100% - 48px) / 3);
+.portfolio-li  {
+  width: calc(100% - 48px) / 3;
   
 }
 .portfolio-app {
